# cpp-rpg-inventory-system

./: .gitignore  CMakeLists.txt  README.md
data/: recipes.json  templates.json
src/: crafting.hpp  enums.hpp  inventory.hpp  item.hpp  item_factory.hpp  json.hpp  logger.hpp  main.cpp  result.hpp
